--- a/data/blog/chuiBi.mdx
+++ b/data/blog/chuiBi.mdx
@@ -12,10 +12,14 @@ authors: ['default']
 
 ---
 
-26.1.13 本站上线，22:44我发的朋友圈。01:44时浏览量500+，bounce rate在40多。
-70%的朋友用ios或mac。pc端与移动端比例4:6。20%人用safari我没想到。
+26.1.18 作业快把我写死了...
+解了力扣23合并k个升序链表，437路径总和III。
+天好冷，不出门了。手受伤了，还没消肿。
 
-![第一天数据](static/images/articles/chuibi/website1stDay.png)
+26.1.13 本站上线，22:44我发的朋友圈。01:44时浏览量500+，bounce rate在40多。
+70%的朋友用ios或mac;pc端与移动端比例4:6;20%人用safari，我没想到。
+
+![第一天数据](/static/images/articles/chuibi/website1stDay.png)
 
 这学期选了五门课，上课时间较多。课上不足以支撑我完成需要较高专注度的工作，无聊了写文章吹牛逼是个选项。
 
